[gd_scene load_steps=8 format=3 uid="uid://difemtk7pdjxu"]

[ext_resource type="Script" uid="uid://npdk561p4mkr" path="res://entities/shell/shell.gd" id="1_sb42f"]
[ext_resource type="Texture2D" uid="uid://bf5hrwaqvtn25" path="res://entities/shell/base_shell_type/rounds.png" id="2_2fcui"]

[sub_resource type="AtlasTexture" id="AtlasTexture_ginmc"]
atlas = ExtResource("2_2fcui")
region = Rect2(30, 159, 4, 3)

[sub_resource type="Curve" id="Curve_2fcui"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_ginmc"]
curve = SubResource("Curve_2fcui")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_2fcui"]
particle_flag_disable_z = true
angle_min = -55.6
angle_max = 219.6
direction = Vector3(-10, 0, 0)
spread = 0.539
initial_velocity_min = 267.13
initial_velocity_max = 299.69
gravity = Vector3(0, 0, 0)
linear_accel_min = -2.23517e-06
linear_accel_max = -2.23517e-06
tangential_accel_min = -5.0
tangential_accel_max = 5.0
scale_curve = SubResource("CurveTexture_ginmc")
color = Color(0.918879, 0.927828, 0, 1)

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_ginmc"]
particle_flag_disable_z = true
angle_min = -55.6
angle_max = 219.6
direction = Vector3(-10, 0, 0)
spread = 0.539
initial_velocity_min = 267.13
initial_velocity_max = 299.69
gravity = Vector3(0, 0, 0)
linear_accel_min = -2.23517e-06
linear_accel_max = -2.23517e-06
tangential_accel_min = -5.0
tangential_accel_max = 5.0
scale_curve = SubResource("CurveTexture_ginmc")
color = Color(0.917647, 0.0196078, 0, 1)

[node name="Shell" type="Area2D"]
scale = Vector2(1.0112, 1)
script = ExtResource("1_sb42f")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PackedVector2Array(-2, 0, -1, 0, 2, 0)

[node name="Sprite2D" type="Sprite2D" parent="."]
unique_name_in_owner = true
texture = SubResource("AtlasTexture_ginmc")

[node name="FireParticles" type="GPUParticles2D" parent="."]
unique_name_in_owner = true
position = Vector2(-2, 0)
scale = Vector2(0.659276, 1.04802)
emitting = false
amount = 50
local_coords = true
process_material = SubResource("ParticleProcessMaterial_2fcui")

[node name="TracerParticles" type="GPUParticles2D" parent="."]
unique_name_in_owner = true
position = Vector2(-2, 0)
scale = Vector2(0.764554, 1.01561)
amount = 200
lifetime = 4.0
local_coords = true
process_material = SubResource("ParticleProcessMaterial_ginmc")

[node name="ShellTip" type="Marker2D" parent="."]
unique_name_in_owner = true
position = Vector2(2, 0)
gizmo_extents = 4.0
